style.css
@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');

html {
	font-size: 62.5%;
	overflow-x: hidden;
}

body {
	font-size: 1.4rem;
	margin: 0;
	padding: 0;
}

/* =14px */
h1 {
	font-size: 2.4rem;
}

/* =24px */
.container-item {
	margin: 0 auto;
}

.landing-page-container {
	background-image: linear-gradient(-225deg, #F3D2D2 0%, #D4E0E2 19%, #81D1E5 42%, #D3D1EC 79%, #C8DAEC 100%);
	color: #2a2a2a;
	display: inline-flex;
	font-family: "Montserrat", sans-serif;
	transition: transform 0.7s cubic-bezier(0.47, 0.04, 0.22, 0.92), height 0.2s ease, width 0.2s ease;
    border-radius: 0;
    height: 100vh;
	overflow: hidden;
	position: fixed;
    left: 0;
    top: 0;
    transform: none;
    width: 100vw;
}

.content-wrapper {
	height: 100%;
	margin: 0 auto;
	max-width: 1200px;
	position: relative;
	width: 90%;
}

.header {
	display: flex;
	height: 2rem;
	justify-content: center;
	padding: 2.5rem 0;
	width: 100%;
}

.main {
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
}

.footer {
	bottom: 10px;
	display: flex;
	height: 2rem;
	justify-content: center;
	padding: 2.5rem 0;
	position: absolute;
	width: 100%;
}

.menu-icon {
	cursor: pointer;
	display: inline-block;
	height: 1.5rem;
	position: relative;
	top: 2.5rem;
	width: 2.5rem;
}

.menu-icon-line {
	background-color: #2a2a2a;
	display: block;
	height: 0.2rem;
	transition: background-color 1s ease-out;
	width: 1.5rem;
}

.menu-icon-line:hover,
.menu-icon-line:hover:before,
.menu-icon-line:hover:after {
	background-color: #FA2FB5;
}

.menu-icon-line:before,
.menu-icon-line:after {
	background-color: #2a2a2a;
	content: '';
	display: inline-block;
	height: 0.2rem;
	position: relative;
	transition: background-color 1s ease-out;
	width: 1.5rem;
}

.menu-icon-line:before {
	left: 0.5rem;
	top: -0.6rem;
}

.menu-icon-line:after {
	top: -1.8rem;
}

.heading {
	color: #2a2a2a;
	font-size: 3rem;
	font-weight: 300;
	line-height: 1.7rem;
	margin: 0;
	padding: 0 10px;
	text-align: center;
	width: auto;
}

.socialbtns ul {
	margin: 0 auto;
	padding: 0;
}

.socialbtns li {
    list-style: none outside none;
    display: inline-block;
}

.socialbtns .fa {
	text-decoration: none;
	padding: 0 5px;
	color: #2a2a2a;
	text-shadow: 1px 1px 0px #fff,
			1px -1px 0px #fff,
			-1px 1px 0px #fff,
			-1px -1px 0px #fff;
	transition: all ease-out 0.5s;
}

.socialbtns .fa:hover {
	color: #FA2FB5;
	text-shadow: 1px 1px 0px #2a2a2a,
			1px -1px 0px #2a2a2a,
			-1px 1px 0px #2a2a2a,
			-1px -1px 0px #2a2a2a;
	transition: all ease 0.5s;
}

.coordinates {
	bottom: 100px;
	display: inline-block;
	font-size: 1rem;
	letter-spacing: 0.2rem;
	margin: 0;
	position: absolute;
}

.ellipses-container {
	border-radius: 50%;
	height: 50rem;
	margin: 0 auto;
	position: absolute;
	top: 10%;
	width: 50rem;
}

.ellipses-container .greeting {
	color: #F3EFE0;
	font-size: 5rem;
	font-weight: 300;
	left: 3rem;
	letter-spacing: 3rem;
	margin: 0 auto;
	position: absolute;
	right: 0;
	text-align: center;
    text-shadow: 0px 3px 0px #b2a98f,
                 0px 14px 10px rgba(0,0,0,0.15),
                 0px 24px 2px rgba(0,0,0,0.1),
                 0px 34px 30px rgba(0,0,0,0.1);
	text-transform: uppercase;
	top: 11.6rem;
	z-index: 1;
}

.ellipses-container .sub-text {
	font-size: 2rem;
	font-weight: 300;
	left: 6rem;
	letter-spacing: 3rem;
	margin: 0 auto;
	position: absolute;
	right: 0;
	text-align: center;
    text-shadow: 0px 3px 0px #b2a98f,
                 0px 4px 10px rgba(0,0,0,0.15),
                 0px 14px 2px rgba(0,0,0,0.1),
                 0px 24px 30px rgba(0,0,0,0.1);
	text-transform: uppercase;
	top: 28rem;
	z-index: 1;
}

.ellipses {
	border-radius: 50%;
	border-style: solid;
	position: absolute;
	top: 5%;
}

.ellipses-outer--thin {
	border-color: rgba(9, 56, 62, 0.1);
	border-width: 1px;
	height: 100%;
	width: 100%;
	-webkit-animation: ellipsesOrbit 15s ease-in-out infinite;
		animation: ellipsesOrbit 15s ease-in-out infinite;
	z-index: -1;
}

.ellipses-outer--thin:after {
	background-image: url('./images/WordPress.png');
	background-position: center;
	background-repeat: no-repeat;
	bottom: 0;
	content: '';
	left: 0;
	opacity: 0.05;
	position: absolute;
	right: 0;
	top: 0;
	transform: rotate(143deg);
}

.ellipses-outer--thick {
	border-color: #FF008E transparent;
	border-width: 1px;
	height: 99.5%;
	transform: rotate(-45deg);
	width: 99.5%;
	-webkit-animation: ellipsesRotate 15s ease-in-out infinite;
        animation: ellipsesRotate 15s ease-in-out infinite;
}

.ellipses-orbit {
	border: none;
    position: absolute;
    width: 25px;
    height: 20px;
    left: 0;
    top: 7%;
}

.ellipses-orbit:before {
	content: url('./images/unicorn.svg');
	display: block;
    height: auto;
    left: -7px;
    margin: 0 auto;
    position: absolute;
    right: 0;
    top: -58px;
    transform: rotate(-43deg) scaleX(-1);
    width: 100px;
}

.scroller {
	bottom: 140px;
	display: inline-block;
	overflow: hidden;
	position: absolute;
	right: 0;
	transform: translateY(50%);
	width: 7.5rem;
}

.scroller .page-title {
	display: inline-block;
	float: left;
	font-family: "Playfair Display", serif;
	letter-spacing: 0.5rem;
	margin-top: 1rem;
}

.scroller .timeline {
	display: inline-block;
	float: right;
	height: 9rem;
	width: 1.5rem;
}

.scroller .timeline .timeline-unit {
	background-color: #434242;
	display: block;
	height: 0.1rem;
	margin: 0 0 2rem;
	opacity: 0.2;
	width: 100%;
}

.scroller .timeline .timeline-unit.timeline-unit--active {
	opacity: 1;
}

.scroller .timeline .timeline-unit.timeline-unit--active:after {
	opacity: 0.2;
}

.scroller .timeline .timeline-unit:after {
	background-color: #434242;
	content: '';
	display: block;
	float: right;
	height: 0.1rem;
	position: relative;
	top: 1rem;
	width: 70%;
}

.cup {
	width: 76px;
    height: 76px;
    background: #dedede;
    border-radius: 50%;
    position: absolute;
    left: 50%;
    margin-left: 97px;
    top: 40px;
    box-shadow: -4px -1px 0 rgb(0 0 0 / 20%);
    z-index: -1;
}

.cup:after{
	background: linear-gradient(-45deg, #cbcbcb, #f2f2f2 );
	border-radius: 50%;
	content: '';
	height: 66px;
	left: 50%;
	margin-left: -33px;
	position: absolute;
	top: 5px;
	width: 66px;
}

.coffee{
	background: #322626;
	background-image: linear-gradient(15deg, transparent 0px, transparent 29px, rgba(255,255,255,0.05) 29px, rgba(255,255,255,0.05) 47px);
	border-radius: 50%;
	border: 3px solid #e9e9e9;
	box-shadow: -3px 2px 0 rgba(0,0,0,0.1);
	height: 47px;
	left: 50%;
	margin-left: -25px;
	margin-top: -26px;
	position: absolute;
	top: 50%;
	transform: rotate(30deg);
	transition: transform 0.3s;
	width: 47px;
	z-index: 1;
}

.coffee:after {
	background: linear-gradient(90deg, #d6d6d6, #aeaeae);
	box-shadow: 0 2px 0 rgba(0,0,0,0.2);
	content: '';
	height: 8px;
	left: -19px;
	position: absolute;
	top: 18px;
	width: 15px;
}

.coffee:before {
	background-image: -moz-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 95%), -moz-radial-gradient(5% 9%, ellipse, rgba(255,255,255,0.1), transparent 5%), -moz-radial-gradient(0% 0%, ellipse, rgba(255,255,255,0.3), transparent 55%);
	background-image: -webkit-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 95%), -webkit-radial-gradient(5% 9%, ellipse, rgba(255,255,255,0.1), transparent 5%), -webkit-radial-gradient(0% 0%, ellipse, rgba(255,255,255,0.3), transparent 55%);
	background-image: radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 95%), radial-gradient(5% 9%, ellipse, rgba(255,255,255,0.1), transparent 5%), radial-gradient(0% 0%, ellipse, rgba(255,255,255,0.3), transparent 55%);
	border-radius: 50%;
	content: '';
	height: 47px;
	left: 0;
	position: absolute;
	width: 47px;
}

.cup:hover .coffee {
  transform: rotate(15deg);
}

.smoke {
	animation: bk 11s infinite ;
	background-image: -moz-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), -moz-radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), -moz-radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%), -moz-radial-gradient(55% 35%, ellipse, rgba(255,255,255,0.2), transparent 15%);
	background-image: -webkit-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), -webkit-radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), -webkit-radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%), -webkit-radial-gradient(55% 35%, ellipse, rgba(255,255,255,0.2), transparent 15%);
	background-image: radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%), radial-gradient(55% 35%, ellipse, rgba(255,255,255,0.2), transparent 15%);
	height: 100px;
	left: 50%;
	margin-left: 40px;
	position: absolute;
	top: 43px;
	width: 70px;
}

.smoke:after {
	animation: bk 2s 1s infinite;
	background-image: -moz-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), -moz-radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), -moz-radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%);
	background-image: -webkit-radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), -webkit-radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), -webkit-radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%);
	background-image: radial-gradient(75% 59%, ellipse, rgba(255,255,255,0.2), transparent 25%), radial-gradient(25% 70%, ellipse, rgba(255,255,255,0.2), transparent 15%), radial-gradient(35% 61%, ellipse, rgba(255,255,255,0.2), transparent 10%);
	content: '';
	height: 100px;
	position: absolute;
	width: 100px;
}

@media screen and (min-width: 992px) {
	.main {
		flex-direction: row;
	}

	.coordinates {
		bottom: unset;
		left: 0;
		top: 15%;
		transform: rotate(-90deg) translateY(50%);
	}

	.scroller {
		bottom: 15%;
	}
}

@keyframes bk {
	0% {
		background-position: 0 0;
		opacity: 0;
	}
	15%, 85% {
		opacity: 1;
	}
	100% {
		background-position: -20px -25px, -5px -25px, 0 -25px, 0 -25px;
		opacity:0;
	}
}

@keyframes ellipsesRotate {
	0% {
		transform: rotate(-45deg);
	}
	100% {
		transform: rotate(-405deg);
	}
}
@-webkit-keyframes ellipsesOrbit {
	0% {
		transform: rotate(0);
	}
	100% {
		transform: rotate(360deg);
	}
}
@keyframes ellipsesOrbit {
	0% {
		transform: rotate(0);
	}
	100% {
		transform: rotate(360deg);
	}
}

.menu {
  position: relative;
}
.menu span {
  position: absolute;
  background-color: black;
  padding: 15px 10px;
  border: 3px solid white;
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
}
.menu span.hidden {
  visibility: hidden;
}
.menu span:last-child {
  padding: 13px 15px;
}
.menu span:nth-child(1) {
  background-color: lightblue;
  padding: 15px 15px;
}
.menu span:nth-child(1).show {
  transform: rotate(0deg) translate(100px) rotate(0deg);
}
.menu span:nth-child(2) {
  background-color: darkblue;
}
.menu span:nth-child(2).show {
  transform: rotate(45deg) translate(100px) rotate(-45deg);
}
.menu span:nth-child(3) {
  background-color: red;
}
.menu span:nth-child(3).show {
  transform: rotate(90deg) translate(100px) rotate(-90deg);
}

